--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,5 +1,4 @@
-<h1>My Recipes</h1>
-<%= link_to 'New Recipe', new_recipe_path, class:"btn btn-secondary" %>
+<h1 class="display-3">My Recipes</h1>
 <br>
 <br>
 
