--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,13 +1,17 @@
-<h1><%= @recipe.title %></h1>
-
-<div class="float-right">
-    <%= link_to 'Edit', edit_recipe_path(@recipe), class:"btn btn-secondary" %>
-    <%= link_to 'Destroy', @recipe, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger" %>
+<div class="float-left">
+    <h1 class="display-3"><%= @recipe.title %></h1>
 </div>
-
+<div class="float-right">
+    <%= link_to 'Edit', edit_user_recipe_path(@recipe.user_id, @recipe.id), class:"btn btn-secondary" %>
+    <%= link_to 'Destroy', user_recipe_path(@recipe.user_id, @recipe.id), method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger" %>
+</div>
+<div class="clearfix"></div>
 <br>
 
-<small><%= @recipe.description %></small>
+<blockquote class="blockquote">
+  <p class="mb-0">"<%= @recipe.description %>"</p>
+  <footer class="blockquote-footer"><cite title="Source Title"><%= @user.username %></cite></footer>
+</blockquote>
 
 <hr>
 <h3>Ingredients</h3>
