--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -3,7 +3,7 @@
     Leave a comment
   </div>
   <div class="card-body bg-light">
-    <%= form_for([@recipe, @recipe.comments.build]) do |form| %>
+    <%= form_for([current_user, @recipe, @comment]) do |form| %>
       <% if @comment.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(@comment.errors.count, "error") %> prohibited this comment from being saved:</h2>
@@ -18,11 +18,11 @@
 
       <div class="field form-group">
         <%= form.label :comment %>
-        <%= form.text_area :comment, class:"form-control" %>
+        <%= form.text_area :comment, class:"form-control", required:'required' %>
       </div>
 
       <div class="actions">
-        <%= form.submit %>
+        <%= form.submit :Post, class:"btn btn-secondary" %>
       </div>
     <% end %>
   </div>
