--- a/app/views/layouts/partials/_navbar.html.erb
+++ b/app/views/layouts/partials/_navbar.html.erb
@@ -9,18 +9,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <%= link_to 'My Recipes', recipes_path, class:"nav-link" %>
+          <%= link_to 'My Recipes', user_recipes_path(current_user.id), class:"nav-link" %>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Browse Recipes</a>
+          <%= link_to 'Create Recipe', new_user_recipe_path(current_user.id), class:"nav-link" %>
         </li>
       </ul>
-      <div class="dropdown">
+      <div class="dropdown dropleft">
         <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          My Account
+          <%= current_user.username %>
         </a>
 
         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <%= link_to 'Edit Account', edit_user_registration_path, class:"dropdown-item" %>
           <%= link_to 'Sign out', destroy_user_session_path, method: 'delete', class:"dropdown-item" %>
         </div>
       </div>
