--- a/app/views/recipes/_recipes_list.html.erb
+++ b/app/views/recipes/_recipes_list.html.erb
@@ -1,7 +1,7 @@
 <% @recipes.each do |recipe| %>
 <div class="card hover">
-  <div class="card-body">
-    <h5 class="card-title"><%= link_to recipe.title, recipe_path(recipe) %></h5>
+  <div class="card-body bg-light">
+    <h5 class="card-title"><%= link_to recipe.title, user_recipe_path(recipe.user_id, recipe.id) %></h5>
     <p class="card-text"><%= recipe.description %></p>
   </div>
 </div>
