--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Recipe</h1>
+<h1 class="display-3">New Recipe</h1>
 
 <%= render 'form', recipe: @recipe %>
 
-<%= link_to 'Back', recipes_path %>
+<%= link_to 'Back', user_recipes_path %>
