--- a/app/views/users/_searchform.html.erb
+++ b/app/views/users/_searchform.html.erb
@@ -6,7 +6,7 @@
         <p class="card-text">Adding friends allows you to share recipes amongst one another.</p>
       <form action="/search">
         <div class="form-group">
-            <input class="form-control" name="q" type="search" placeholder="Search" aria-label="Search">
+            <input class="form-control" name="q" type="search" placeholder="Search" aria-label="Search" required>
         </div>
         <div class="form-group">
             <button class="btn btn-primary" type="submit">Search</button>
